--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -7,6 +7,7 @@ ru:
         title: 'Название'
         summary: 'Описание'
         body: 'Текст статьи'
+        all_tags: 'Теги'
     errors:
       messages:
         blank: 'Не может быть пустым'
